# 3d_object_localization

./: .gitignore  CMakeLists.txt
src/: main.cpp  main_offline.cpp  main_offline_ir.cpp  store_img.cpp
src/utilities/: calibrate_rs.cpp  calibrate_rs.hpp  detect_objects.cpp  detect_objects.hpp  homography_rs.cpp  homography_rs.hpp
